--- a/views/asideNav.ejs
+++ b/views/asideNav.ejs
@@ -1,18 +1,18 @@
 <h2 id="asideTitle">Produkter</h2>
 <ul id="asideNav">
     <li class="asideNavItem">
-        Alle
+        <a href="/produkter">Alle</a>
     </li>
     <li class="asideNavItem">
-        Shoon
+        <a href="/produkter?cat=0">Shoon</a>
     </li>
     <li class="asideNavItem">
-        Korea Special
+        <a href="/produkter?cat=1">Korea Special</a>
     </li>
     <li class="asideNavItem">
-        US. Imports
+        <a href="/produkter?cat=2">US. Imports</a>
     </li>
     <li class="asideNavItem">
-        Sleek Fabrics UK
+        <a href="/produkter?cat=3">Sleek Fabrics UK</a>
     </li>
 </ul>
