--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,10 +23,10 @@
                 <input type="text" id="searchInput"/ name="q" value="<%= srcQuery %>">
                 <input type="submit" id="searchSubmit" value=""/> 
             </form>
-            <a href="www.facebook.com" class="socialIcon">
+            <a href="http://www.facebook.com" class="socialIcon">
                 <img src="icons/facebook.jpg">
             </a>
-            <a href="www.twitter.com" class="socialIcon">
+            <a href="http://www.twitter.com" class="socialIcon">
                 <img src="icons/twitter.jpg">
             </a>
         </li>
